examples/semantics/errors/error15.grace
fun error15 () : nothing
	fun foo(c:char) :int;
{
	puti(9);
}
